#
# linux-ha: Linux-HA heartbeat code
#
# Copyright (C) 2002 International Business Machines.
# Author:	Alan Robertson <alanr@unix.sh>
#
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
# 
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
# 
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
#
MAINTAINERCLEANFILES    = Makefile.in

include_HEADERS	= 		\
	Gmain_timeout.h	\
	apphb_cs.h	\
	base64.h	\
	cl_log.h	\
	ipc.h		\
	loggingdaemon.h	\
	longclock.h	\
	mkstemp_mode.h	\
	proctrack.h
