#
# linux-ha: Linux-HA heartbeat code
#
# Copyright (C) 2002 International Business Machines.
# Author:	Alan Robertson <alanr@unix.sh>
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA

#
MAINTAINERCLEANFILES    = Makefile.in

idir=$(includedir)/clplumbing

i_HEADERS	=	\
	Gmain_timeout.h	\
	GSource.h	\
	GSource_internal.h	\
	apphb_cs.h	\
	base64.h	\
	cl_log.h	\
	cl_poll.h	\
	cl_signal.h	\
	cl_pidfile.h	\
	cl_random.h	\
	cl_reboot.h	\
	cl_syslog.h	\
	cl_uuid.h	\
	coredumps.h	\
	cpulimits.h	\
	ipc.h		\
	lsb_exitcodes.h	\
	loggingdaemon.h	\
	longclock.h	\
	mkstemp_mode.h	\
	netstring.h	\
	proctrack.h	\
	realtime.h	\
	replytrack.h	\
	setproctitle.h	\
	timers.h	\
	uids.h		\
	cl_misc.h	\
	md5.h		\
	cl_plugin.h	\
	cl_tiebreaker.h	\
	cl_quorum.h	\
	cl_quorumd.h
